backend/k8s/gt_backend-ser.yml
apiVersion: v1
kind: Service
metadata:
  name: gold-backend
spec:
  selector:
    app: gold-backend
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
