backend/k8s/gt_frontend-ser.yml
apiVersion: v1
kind: Service
metadata:
  name: gold-frontend
spec:
  type: NodePort
  selector:
    app: gold-frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
