backend/k8s/gt_mariadb-service.yml
# k8s/infra/mariadb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
spec:
  clusterIP: None
  selector:
    app: mariadb
  ports:
    - port: 3306
      targetPort: 3306
