backend/k8s/gt_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gold-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: gold-backend
                port:
                  number: 80

          - path: /stock
            pathType: Prefix
            backend:
              service:
                name: gold-backend
                port:
                  number: 80

          - path: /ranking
            pathType: Prefix
            backend:
              service:
                name: gold-backend
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: gold-frontend
                port:
                  number: 80
